Fixed header lines on IE 9-11
Last commit was reviewed back so I made the fixes

--- a/app/memreas/css/register.css
+++ b/app/memreas/css/register.css
@@ -91,9 +91,18 @@ span.clear {
 
 /****Content Styles***/
 header {
-    background: -moz-linear-gradient(top, #b0bccd 0%, #7e92ad 100%);
+    /*background: -moz-linear-gradient(top, #b0bccd 0%, #7e92ad 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b0bccd), color-stop(100%,#7e92ad));
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b0bccd', endColorstr='#7e92ad',GradientType=0 ); /* IE6-9 */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b0bccd', endColorstr='#7e92ad',GradientType=0 );*/ /* IE6-9 */
+
+    background: #b0bccd; /* Old browsers Khan Changes*/
+    background: -moz-linear-gradient(top, #b0bccd 0%, #7e92ad 100%); /* FF3.6+ Khan Changes*/
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b0bccd), color-stop(100%,#7e92ad)); /* Chrome,Safari4+ Khan Changes*/
+    background: -webkit-linear-gradient(top, #b0bccd 0%,#7e92ad 100%); /* Chrome10+,Safari5.1+ Khan Changes*/
+    background: -o-linear-gradient(top, #b0bccd 0%,#7e92ad 100%); /* Opera 11.10+ Khan Changes*/
+    background: -ms-linear-gradient(top, #b0bccd 0%,#7e92ad 100%); /* IE10+ Khan Changes*/
+    background: linear-gradient(to bottom, #b0bccd 0%,#7e92ad 100%); /* W3C Khan Changes*/
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b0bccd', endColorstr='#7e92ad',GradientType=0 ); /* IE6-9 Khan Changes*/
     left: 0;
     position: fixed;
     top: 0;
@@ -135,16 +144,34 @@ header {
 	width: 50%;
 }
 .body-top {
-    background: -moz-linear-gradient(top, #083b7a 0%, #4e8dd4 100%);
+    /*background: -moz-linear-gradient(top, #083b7a 0%, #4e8dd4 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#083b7a), color-stop(100%,#4e8dd4));
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#083b7a', endColorstr='#4e8dd4',GradientType=0 ); /* IE6-9 */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#083b7a', endColorstr='#4e8dd4',GradientType=0 );*/ /* IE6-9 */
+    background: #083b7a; /* Old browsers */
+    background: -moz-linear-gradient(top,  #083b7a 0%, #4e8dd4 100%); /* FF3.6+ Khan Changes*/
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#083b7a), color-stop(100%,#4e8dd4)); /* Chrome,Safari4+ Khan Changes*/
+    background: -webkit-linear-gradient(top,  #083b7a 0%,#4e8dd4 100%); /* Chrome10+,Safari5.1+ Khan Changes*/
+    background: -o-linear-gradient(top,  #083b7a 0%,#4e8dd4 100%); /* Opera 11.10+ Khan Changes*/
+    background: -ms-linear-gradient(top,  #083b7a 0%,#4e8dd4 100%); /* IE10+ Khan Changes*/
+    background: linear-gradient(to bottom,  #083b7a 0%,#4e8dd4 100%); /* W3C Khan Changes*/
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#083b7a', endColorstr='#4e8dd4',GradientType=0 ); /* IE6-9 Khan Changes*/
+
     border-bottom: 2px solid #6c9fda;
 }
 .body-bottom {
-    background: -moz-linear-gradient(top, #4e8dd4 0%, #083b7a 100%);
+    /*background: -moz-linear-gradient(top, #4e8dd4 0%, #083b7a 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4e8dd4), color-stop(100%,#083b7a));
 
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4e8dd4', endColorstr='#083b7a',GradientType=0 ); /* IE6-9 */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4e8dd4', endColorstr='#083b7a',GradientType=0 );*/ /* IE6-9 */
+    background: #4e8dd4; /* Old browsers */
+    background: -moz-linear-gradient(top,  #4e8dd4 0%, #083b7a 100%); /* FF3.6+ Khan Changes*/
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4e8dd4), color-stop(100%,#083b7a)); /* Chrome,Safari4+ Khan Changes*/
+    background: -webkit-linear-gradient(top,  #4e8dd4 0%,#083b7a 100%); /* Chrome10+,Safari5.1+ Khan Changes*/
+    background: -o-linear-gradient(top,  #4e8dd4 0%,#083b7a 100%); /* Opera 11.10+ Khan Changes*/
+    background: -ms-linear-gradient(top,  #4e8dd4 0%,#083b7a 100%); /* IE10+ Khan Changes*/
+    background: linear-gradient(to bottom,  #4e8dd4 0%,#083b7a 100%); /* W3C Khan Changes*/
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4e8dd4', endColorstr='#083b7a',GradientType=0 ); /* IE6-9 Khan Changes*/
+
     min-height: 581px;
 }
 .slogan h2 {
